Removed console app

--- a/GiantSMSConsoleApp/appsettings.json
+++ b/GiantSMSConsoleApp/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "GiantSmsConnector": {
+  "GiantSmsConnection": {
     "Username": "VWUXQgmq",
     "Password": "GFDtwrKnag",
     "Token": "VldVWFFnbXE6R0ZEdHdyS25hZw==",
