--- a/GiantSms.Demo/appsettings.json
+++ b/GiantSms.Demo/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "GiantSmsConnection": {
-    "Username": "VWUXQgmq",
-    "Password": "GFDtwrKnag",
-    "Token": "VldVWFFnbXE6R0ZEdHdyS25hZw==",
-    "SenderId": "GPCL"
+    "Username": "",
+    "Password": "",
+    "Token": "",
+    "SenderId": ""
   }
 }
