--- a/GiantSMS.Net/GiantSMS.Net.csproj
+++ b/GiantSMS.Net/GiantSMS.Net.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
 		<PackageId>GiantSms.Net</PackageId>
-		<Version>1.0.2</Version>
+		<Version>2.0.0</Version>
 		<Authors>Benjamin Aduo</Authors>
 		<Company>RootyDev</Company>
 		<Description>GiantSms.Net is a .NET library that provides a simple and easy-to-use interface for sending SMS messages using the Giant SMS API.</Description>
@@ -13,6 +13,10 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Title>GiantSms.Net</Title>
+		<PackageIcon>logo_new_3.png</PackageIcon>
+		<RepositoryUrl>https://github.com/benaduo/GiantSms.Net</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -20,6 +24,13 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="logo_new_3.png">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
