--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /client-credentials.txt
+/.idea/.idea.GiantSMS.Net/.idea
+/.gitignore
